fixed layout issues (css)

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -91,7 +91,6 @@ input{
 .interface-container{
 	height: 100%;
 	width: 100%;
-	padding: 20px;
 	border-radius: 9px;
 	overflow: auto;
 	background-color: rgba(0,0,0,0.48);
@@ -100,6 +99,10 @@ input{
 	-moz-tab-size: 3;
 	-o-tab-size: 3;
 	tab-size: 3;
+}
+
+.shell-container{
+	padding: 20px;
 }
 
 .output-text{
